Kapitel 10 (S.193): Activity erstellt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.TaskEditActivity"
+            android:label="@string/title_activity_task_edit"
+            android:parentActivityName=".activity.TaskListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.dummies.tasks.activity.TaskListActivity" />
+        </activity>
     </application>
 
 </manifest>
