--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <provider
+        android:name=".provider.TaskProvider"
+        android:authorities="com.dummies.tasks.provider.TaskProvider"
+        android:exported="false" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
